# Embeded_Project_Template

./: .gitignore  ToDo.txt
.devcontainer/: Dockerfile
.github/workflows/: CI_workflow.yml  daily_test_workflow.yml  run_cppcheck.yml
assets/css/: custom-dark.css
hw/STM32G070RB/: CMakeLists.txt
reports/: Info.txt
test/template/: CMakeLists.txt  custom_targets.cmake
